--- a/cystitis.html
+++ b/cystitis.html
@@ -103,6 +103,8 @@
                           stroke-linejoin="round"/>
                 </svg>
                 На головну</a>
+        </div>
+        <div class="anim-page">
             <div class="page__heading frosted">
                 <h1 class="page__title heading_h1">Цистит</h1>
                 <div class="page__sub-title heading_h4">
