--- a/page-effectiveness.html
+++ b/page-effectiveness.html
@@ -104,40 +104,43 @@
                           stroke-linejoin="round"/>
                 </svg>
                 На головну</a>
-
-            <div class="d_flex">
-                <div class="col-4">
-                    <h2 class="page-effectiveness__heading">Ефективність препарату</h2>
-                </div>
-                <div class="col-8">
-                    <div class="effects-list">
-                        <div class="effects-list__item">
-                            <div class="effects-list__icon"
-                                 style="background-image: url(assets/img/svg/speed.svg);"></div>
-                            <div class="effects-list__content">
-                                <h3 class="effects-list__title heading heading_1">Швидкодія</h3>
-                                <div class="effects-list__text">
-                                    Дія крапель починається вже за 20-30 хвилин
+        </div>
+        <div class="anim-page">
+            <div class="container">
+                <div class="d_flex">
+                    <div class="col-4">
+                        <h2 class="page-effectiveness__heading">Ефективність препарату</h2>
+                    </div>
+                    <div class="col-8">
+                        <div class="effects-list">
+                            <div class="effects-list__item">
+                                <div class="effects-list__icon"
+                                     style="background-image: url(assets/img/svg/speed.svg);"></div>
+                                <div class="effects-list__content">
+                                    <h3 class="effects-list__title heading heading_1">Швидкодія</h3>
+                                    <div class="effects-list__text">
+                                        Дія крапель починається вже за 20-30 хвилин
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="effects-list__item">
-                            <div class="effects-list__icon"
-                                 style="background-image: url(assets/img/svg/relief.svg);"></div>
-                            <div class="effects-list__content">
-                                <h3 class="effects-list__title heading heading_1">Полегшення</h3>
-                                <div class="effects-list__text">
-                                    Сприяє швидкому полегшенню симптомів циститу та повернення до активного життя
+                            <div class="effects-list__item">
+                                <div class="effects-list__icon"
+                                     style="background-image: url(assets/img/svg/relief.svg);"></div>
+                                <div class="effects-list__content">
+                                    <h3 class="effects-list__title heading heading_1">Полегшення</h3>
+                                    <div class="effects-list__text">
+                                        Сприяє швидкому полегшенню симптомів циститу та повернення до активного життя
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="effects-list__item">
-                            <div class="effects-list__icon"
-                                 style="background-image: url(assets/img/svg/security.svg);"></div>
-                            <div class="effects-list__content">
-                                <h3 class="effects-list__title heading heading_1">Безпека</h3>
-                                <div class="effects-list__text">
-                                    Зменшує ризик виникнення рецидивів циститу у 2,5 рази
+                            <div class="effects-list__item">
+                                <div class="effects-list__icon"
+                                     style="background-image: url(assets/img/svg/security.svg);"></div>
+                                <div class="effects-list__content">
+                                    <h3 class="effects-list__title heading heading_1">Безпека</h3>
+                                    <div class="effects-list__text">
+                                        Зменшує ризик виникнення рецидивів циститу у 2,5 рази
+                                    </div>
                                 </div>
                             </div>
                         </div>
