--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -113,40 +113,25 @@
                     </div>
                     <div class="toggle-content toggle-content_light-bg">
                         <div class="block-more-info text_md">
-                            <p> Для захворювання характерний гострий початок з сильним нездужанням. З цієї причини
-                                загальний
-                                стан
-                                пацієнта нагадує застуду. Далі пієлонефрит симптоми може варіювати, що залежить від
-                                форми
-                                хвороби.</p>
 
-                            <p>Один з характерних ознак - сеча при пієлонефриті з різким запахом через розвиток
-                                інфекції.
-                                Стан
-                                пацієнта може погіршуватися також відрижкою, м'язовою слабкістю і появою набряків.
-                                Шкірна на
-                                тлі
-                                інтоксикації організму бліда.</p>
+                            <p>Пієлонефрит нирок зустрічається однаково часто у дорослих і дітей. Бактеріальна інфекція
+                                вражає всі структурні відділи: балії, чашечки, паренхіму. Пієлонефрит підступний своєї
+                                скритністю і здатністю маскуватися під застуду, цистит, гастрит, радикуліт.</p>
 
-                            <p>Симптоми пієлонефриту досить схожі з іншими патологічними станами, що ускладнює його
-                                діагностику.
-                                Болі в області нирок - один із симптомів, який повинен насторожити і стати приводом для
-                                звернення до
-                                лікаря. Обстежитися необхідно як при гострих станах, так і при затяжному перебігу
-                                хвороби.
-                                Добре
-                                маскується хронічний пієлонефрит під тривалу застуду, гінекологічні захворювання.</p>
+                            <p> У молодому віці частіше хворіють жінки, але з віком співвідношення зміщується в бік
+                                чоловіків через прояви вікових проблем з передміхурової залозою. Згідно зі статистикою,
+                                пієлонефрит нирок діагностується у 20% населення.</p>
 
-                            <p>Звернутися до лікаря необхідно і при проблемах з відтоком сечі. Нез'ясована причина цього
-                                факту є
-                                постійним вогнищем для виникнення бактеріальної інфекції. Про її початок може свідчити
-                                різкий і
-                                неприємний запах сечі. Лікування в таких випадках має починатися негайно.</p>
+                            <p>Найбільша помилка, що будь-які хвороби нирок повинні супроводжуватися сильним болем. Це один
+                                з можливих симптомів, але він може не завжди носити виражений характер. Латентний перебіг
+                                недуги (хронічне і безсимптомний) може виявитися випадково на УЗД або КТ при обстеженні з
+                                інших якихось причин. Скачки тиску, лихоманка, нездужання, загальна слабкість рідко
+                                сприймаються серйозно, щоб записуватися на прийом саме до уролога.</p>
 
-                            <p>Це допоможе уникнути структурних змін в нирках. Поява кров'яних включень, підвищення
-                                рівня
-                                білка
-                                в аналізі сечі, ниркові коліки - також причини для візиту до уролога.</p>
+                            <p> Якщо виникає пієлонефрит у чоловіків, то почистити нирки пивом не можна, хоча багато хто
+                                впевнений у зворотному. Це ще одне велика помилка. Пиво не несе ніякої користі нирках. А ось
+                                переохолоджуватися не можна - це правда. Це призводить до висхідних запальних процесів.</p>
+
                         </div>
 
                         <button data-open-text="Закрити" data-default-text="Більше інформації"
