--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -101,172 +101,187 @@
                           stroke-linejoin="round"/>
                 </svg>
                 На головну</a>
-            <div class="page__heading frosted">
-                <h1 class="page__title heading_h1">Пісок <br>
-                    у нирках</h1>
-                <div class="page__sub-title heading_h4">
-                    це початкова форма нефролітіазу, або сечокам’яної хвороби
-                </div>
-            </div>
         </div>
-        <section class="symptoms">
-            <div class="container">
-                <ul class="symptoms-list">
-                    <li class="symptoms-list__item">
-                        <div class="symptoms-list__bg-icon"
-                             style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
-                        <div class="symptoms-list__text">Гострий біль у нирках
-                            при сечовипусканні
-                        </div>
-                    </li>
-                    <li class="symptoms-list__item">
-                        <div class="symptoms-list__bg-icon"
-                             style="background-image: url(assets/img/svg/nausea1.svg);"></div>
-                        <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
-                    </li>
-                    <li class="symptoms-list__item">
-                        <div class="symptoms-list__bg-icon"
-                             style="background-image: url(assets/img/svg/urine1.svg);"></div>
-                        <div class="symptoms-list__text">Кров і частинки
-                            піску в сечі
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <section class="section-reason">
-            <div class="container">
-                <div class="section-reason__heading">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <h2 class="section-reason__title">
-                        <span class="text_uppercase ">ПРИЧИНИ</span><br>
-                        які провокують
-                        виникнення
-                        сечокам’яної
-                        хвороби
-                    </h2>
-                </div>
 
-                <div class="swiper-container reason-slider">
-                    <div class="reason-list swiper-wrapper">
-                        <div class="swiper-slide part part_left">
-                            <div class="reason-list__item reason-list__item_1">
-                                <div class="reason-list__icon">
-                                    <img src="assets/img/svg/1.svg" alt="">
+        <div class="anim-page">
+            <div class="container">
+                <div class="page__heading frosted">
+                    <h1 class="page__title heading_h1">Пісок <br>
+                        у нирках</h1>
+                    <div class="page__sub-title heading_h4">
+                        це початкова форма нефролітіазу, або сечокам’яної хвороби
+                    </div>
+                </div>
+            </div>
+
+            <section class="symptoms">
+                <div class="container">
+                    <ul class="symptoms-list">
+                        <li class="symptoms-list__item">
+                            <div class="symptoms-list__bg-icon"
+                                 style="background-image: url(assets/img/svg/kidneys1.svg);"></div>
+                            <div class="symptoms-list__text">Гострий біль у нирках
+                                при сечовипусканні
+                            </div>
+                        </li>
+                        <li class="symptoms-list__item">
+                            <div class="symptoms-list__bg-icon"
+                                 style="background-image: url(assets/img/svg/nausea1.svg);"></div>
+                            <div class="symptoms-list__text">Прояви нудоти та блювотиння</div>
+                        </li>
+                        <li class="symptoms-list__item">
+                            <div class="symptoms-list__bg-icon"
+                                 style="background-image: url(assets/img/svg/urine1.svg);"></div>
+                            <div class="symptoms-list__text">Кров і частинки
+                                піску в сечі
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="section-reason">
+                <div class="container">
+                    <div class="section-reason__heading">
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <div class="circle"></div>
+                        <h2 class="section-reason__title">
+                            <span class="text_uppercase ">ПРИЧИНИ</span><br>
+                            які провокують
+                            виникнення
+                            сечокам’яної
+                            хвороби
+                        </h2>
+                    </div>
+
+                    <div class="swiper-container reason-slider">
+                        <div class="reason-list swiper-wrapper">
+                            <div class="swiper-slide part part_left">
+                                <div class="reason-list__item reason-list__item_1">
+                                    <div class="reason-list__icon">
+                                        <img src="assets/img/svg/1.svg" alt="">
+                                    </div>
+                                    <p>Спадкова <br> схильність</p>
                                 </div>
-                                <p>Спадкова <br> схильність</p>
+
+
+                                <div class="reason-list__item reason-list__item_2">
+                                    <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
+                                    <p>Проблеми <br> з нирками і органами</p>
+                                </div>
+
+                                <div class="reason-list__item reason-list__item_3">
+                                    <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
+                                    <p>Незбалансований раціон харчування</p>
+                                </div>
                             </div>
 
-
-                            <div class="reason-list__item reason-list__item_2">
-                                <div class="reason-list__icon"><img src="assets/img/svg/2.svg" alt=""></div>
-                                <p>Проблеми <br> з нирками і органами</p>
-                            </div>
-
-                            <div class="reason-list__item reason-list__item_3">
-                                <div class="reason-list__icon"><img src="assets/img/svg/3.svg" alt=""></div>
-                                <p>Незбалансований раціон харчування</p>
+                            <div class="swiper-slide part part_right">
+                                <div class="reason-list__item reason-list__item_4">
+                                    <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
+                                    <p>Брак поживних <br> речовин та вітамінів</p>
+                                </div>
+                                <div class="reason-list__item reason-list__item_5">
+                                    <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
+                                    <p>Зневоднення <br> організму</p>
+                                </div>
+                                <div class="reason-list__item reason-list__item_6">
+                                    <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
+                                    <p>проблема <br> з обміном речовин</p>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="swiper-slide part part_right">
-                            <div class="reason-list__item reason-list__item_4">
-                                <div class="reason-list__icon"><img src="assets/img/svg/4.svg" alt=""></div>
-                                <p>Брак поживних <br> речовин та вітамінів</p>
-                            </div>
-                            <div class="reason-list__item reason-list__item_5">
-                                <div class="reason-list__icon"><img src="assets/img/svg/5.svg" alt=""></div>
-                                <p>Зневоднення <br> організму</p>
-                            </div>
-                            <div class="reason-list__item reason-list__item_6">
-                                <div class="reason-list__icon"><img src="assets/img/svg/6.svg" alt=""></div>
-                                <p>проблема <br> з обміном речовин</p>
-                            </div>
-                        </div>
+                        <div class="swiper-pagination"></div>
                     </div>
-
-                    <div class="swiper-pagination"></div>
                 </div>
-            </div>
-        </section>
-        <section class="prevention">
-            <div class="container">
-                <h3 class="prevention__heading heading_xxl">
-                    Заходами профілактики <span class="small">циститу є наступні дії</span>
-                </h3>
-                <div class="prevention__list">
-                    <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/cupcake1.svg);"></div>
-                        <div class="prevention__text">
-                            Обмежити солодке харчування
+            </section>
+            <section class="prevention">
+                <div class="container">
+                    <h3 class="prevention__heading heading_xxl">
+                        Заходами профілактики <span class="small">циститу є наступні дії</span>
+                    </h3>
+                    <div class="prevention__list">
+                        <div class="prevention__item">
+                            <div class="prevention__icon"
+                                 style="background-image: url(assets/img/svg/cupcake1.svg);"></div>
+                            <div class="prevention__text">
+                                Обмежити солодке харчування
+                            </div>
                         </div>
-                    </div>
-                    <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/wine1.svg);"></div>
-                        <div class="prevention__text">
-                            Виключити вживання алкоголю
+                        <div class="prevention__item">
+                            <div class="prevention__icon"
+                                 style="background-image: url(assets/img/svg/wine1.svg);"></div>
+                            <div class="prevention__text">
+                                Виключити вживання алкоголю
+                            </div>
                         </div>
-                    </div>
-                    <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/salad1.svg);"></div>
-                        <div class="prevention__text">
-                            Правильний раціон харчування
+                        <div class="prevention__item">
+                            <div class="prevention__icon"
+                                 style="background-image: url(assets/img/svg/salad1.svg);"></div>
+                            <div class="prevention__text">
+                                Правильний раціон харчування
+                            </div>
                         </div>
-                    </div>
-                    <div class="prevention__item">
-                        <div class="prevention__icon"
-                             style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
-                        <div class="prevention__text">
-                            Регулярний прийом питної води
+                        <div class="prevention__item">
+                            <div class="prevention__icon"
+                                 style="background-image: url(assets/img/svg/water-bottle2.svg);"></div>
+                            <div class="prevention__text">
+                                Регулярний прийом питної води
+                            </div>
                         </div>
-                    </div>
-                    <div class="prevention__item">
-                        <div class="prevention__icon" style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
-                        <div class="prevention__text">
-                            Бути фізично
-                            активними
+                        <div class="prevention__item">
+                            <div class="prevention__icon"
+                                 style="background-image: url(assets/img/svg/dumbbell1.svg);"></div>
+                            <div class="prevention__text">
+                                Бути фізично
+                                активними
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
+                    <div class="toggle-content">
+                        <div class="block-more-info block-more-info_white text_md hide-info">
+                            <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується
+                                медикаментозна
+                                та
+                                фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
+                                антибіотики
+                                при
+                                пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
+
+                            <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
+                                сечовипускання.
+                                Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку
+                                комплексної
+                                терапії ступінь проявів симптомів знижується.</p>
+
+                            <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках.
+                                Ремісія
+                                періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту.
+                                Під
+                                час
+                                ремісії
+                                обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
+
+                            <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які
+                                можуть
+                                виникати
+                                через переохолодження. Дотримання рухової активності і режиму харчування можуть принести
+                                користь
+                                і
+                                на
+                                чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
+                                пієлонефриту.</p>
+                        </div>
+                        <button data-open-text="Закрити" data-default-text="Більше інформації"
+                                class="show-more btn btn_glass ">Більше інформації
+                        </button>
+                    </div>
                 </div>
-                <div class="toggle-content">
-                    <div class="block-more-info block-more-info_white text_md hide-info">
-                        <p>Лікування пієлонефриту вимагає комплексного характеру. Терапія застосовується медикаментозна
-                            та
-                            фізіотерапевтична. Тактика лікування підбирається урологом індивідуально. Призначаються
-                            антибіотики
-                            при
-                            пієлонефриті в гострій стадії для придушення бактеріальної інфекції.</p>
-
-                        <p>На першому місці стоїть необхідність відновлення відтоку сечі і пошуку причини порушення
-                            сечовипускання.
-                            Також показані дієта при пієлонефриті і постільний режим. Через 3-5 діб після початку
-                            комплексної
-                            терапії ступінь проявів симптомів знижується.</p>
-
-                        <p>Хронічна стадія захворювання повністю не виліковується через структурних змін в нирках.
-                            Ремісія
-                            періодично змінюється загостреннями, які лікуються за принципом гострого пієлонефриту. Під
-                            час
-                            ремісії
-                            обов'язково потрібно дотримуватися дієти і не забувати про підтримуючу терапію.</p>
-
-                        <p>Лікування пієлонефриту у жінок часто пов'язано з гінекологічними захворюваннями, які можуть
-                            виникати
-                            через переохолодження. Дотримання рухової активності і режиму харчування можуть принести
-                            користь
-                            і
-                            на
-                            чоловіків. Якщо захворювання в хронічній формі, потрібно не допускати загострення
-                            пієлонефриту.</p>
-                    </div>
-                    <button data-open-text="Закрити" data-default-text="Більше інформації" class="show-more btn btn_glass ">Більше інформації</button>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
