--- a/page-composition.html
+++ b/page-composition.html
@@ -253,6 +253,10 @@ Humulus lupulus
                 </div>
             </div>
         </div>
+        <a href="#" class="block-buy">
+            <div class="hexagon"></div>
+            <div class="buy">Купити</div>
+        </a>
     </main>
     <footer class="footer">
         <div class="container">
