--- a/sand-kidney.html
+++ b/sand-kidney.html
@@ -102,7 +102,6 @@
                 </svg>
                 На головну</a>
         </div>
-
         <div class="anim-page">
             <div class="container">
                 <div class="page__heading frosted">
@@ -282,6 +281,10 @@
                 </div>
             </section>
         </div>
+        <a href="#" class="block-buy">
+            <div class="hexagon"></div>
+            <div class="buy">Купити</div>
+        </a>
     </main>
     <footer class="footer">
         <div class="container">
