--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -434,7 +434,12 @@
                     </div>
                 </div>
             </section>
+
         </div>
+        <a href="#" class="block-buy">
+            <div class="hexagon"></div>
+            <div class="buy">Купити</div>
+        </a>
     </main>
     <footer class="footer">
         <div class="container">
