--- a/cystitis.html
+++ b/cystitis.html
@@ -231,7 +231,6 @@
                 </div>
             </div>
         </section>
-
         <section class="prevention">
             <div class="container">
                 <h3 class="prevention__heading heading_xxl">
@@ -313,6 +312,10 @@
                 </div>
             </div>
         </section>
+        <a href="#" class="block-buy">
+            <div class="hexagon"></div>
+            <div class="buy">Купити</div>
+        </a>
     </main>
     <footer class="footer">
         <div class="container">
