--- a/page-effectiveness.html
+++ b/page-effectiveness.html
@@ -148,6 +148,10 @@
                 </div>
             </div>
         </div>
+        <a href="#" class="block-buy">
+            <div class="hexagon"></div>
+            <div class="buy">Купити</div>
+        </a>
     </main>
     <footer class="footer">
         <div class="container">
