--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -505,6 +505,10 @@
                 </div>
             </section>
         </div>
+        <a href="#" class="block-buy">
+            <div class="hexagon"></div>
+            <div class="buy">Купити</div>
+        </a>
     </main>
     <footer class="footer">
         <div class="container">
