--- a/urolithiasis.html
+++ b/urolithiasis.html
@@ -292,7 +292,7 @@
                     </div>
                 </div>
             </section>
-            <section class="prevention">
+            <section class="prevention"п>
                 <div class="container">
                     <h3 class="prevention__heading heading_xxl">
                         Заходами профілактики <span class="small">циститу є наступні дії</span>
