add gif, change layout slider

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="wrap-img">
                 <img class="tablet" src="assets/img/tablet-1.png" alt="">
 
-                    <img class="hand" src="assets/img/hand-right-1.png" alt="">
+                <img class="hand" src="assets/img/hand-right-1.png" alt="">
 
             </div>
         </section>
@@ -175,9 +175,6 @@
 
         <section class="section-slider">
             <div class="wrapper-slider">
-                <div class="wrapper-gif">
-                    <img src="assets/img/giphy-4.png" alt="">
-                </div>
                 <div class="swiper-container about-urolesan">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-about">
@@ -188,7 +185,7 @@
                                 <a href="#" class="btn btn_main">Детальніше про препарат</a>
                             </div>
                             <div class="slide-about__img">
-                                <img src="assets/img/gif-2.png" alt="">
+                                <img src="assets/img/1.gif" alt="">
                             </div>
                         </div>
                         <div class="swiper-slide slide-about">
@@ -199,7 +196,7 @@
                                 <a href="page-effectiveness.html" class="btn btn_main">Детальніше про препарат</a>
                             </div>
                             <div class="slide-about__img">
-                                <img src="assets/img/gif-2.png" alt="">
+                                <img src="assets/img/2.gif" alt="">
                             </div>
                         </div>
                         <div class="swiper-slide slide-about">
@@ -210,7 +207,7 @@
                                 <a href="page-composition.html" class="btn btn_main">Детальніше про препарат</a>
                             </div>
                             <div class="slide-about__img">
-                                <img src="assets/img/gif-2.png" alt="">
+                                <img src="assets/img/3.gif" alt="">
                             </div>
                         </div>
                     </div>
@@ -447,7 +444,7 @@
     <div class="popup">
         <h5 class="popup__title heading_h1">Підтвердити перехід
             на зовнішній ресурс</h5>
-              <div class="popup__content">
+        <div class="popup__content">
             <div class="popup__text">
                 <p>
                     Ви залишаєте сайт представництва компанії “АРТЕРІУМ”
