add animation gif banner

--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
 
     <div class="backdrop"></div>
     <main class="main  home">
-        <section class="section-banner" style="background-image: url(assets/img/banner-img.jpg);">
+        <section class=" section-banner" style="background-image: url(assets/img/3.jpg);">
+            <div class="bg-effect" style="background-image: url(assets/img/2.png);">
+                <div class="bg-effect-gif"></div>
+                <div class="bg-effect-1"></div>
+                <div class="bg-window"></div>
+            </div>
             <div class="container">
                 <div class="section-banner__slogan">
                     <span class="text-big text_uppercase">ПРОГРЕСИВНИЙ</span>
