fix fz menu and slider reason, speed slider index

--- a/page-effectiveness.html
+++ b/page-effectiveness.html
@@ -192,7 +192,7 @@
 
             </div>
             <div class="footer_bottom">
-                <div class="design">Design by <strong>Profi Creative</strong></div>
+                <div class="design">Design by <a href="#"><strong>Profi Creative</strong></a></div>
                 <div class="copyright">© 2021. Всі права захищені</div>
             </div>
         </div>
