--- a/pyelonephritis.html
+++ b/pyelonephritis.html
@@ -122,15 +122,20 @@
                                 чоловіків через прояви вікових проблем з передміхурової залозою. Згідно зі статистикою,
                                 пієлонефрит нирок діагностується у 20% населення.</p>
 
-                            <p>Найбільша помилка, що будь-які хвороби нирок повинні супроводжуватися сильним болем. Це один
-                                з можливих симптомів, але він може не завжди носити виражений характер. Латентний перебіг
-                                недуги (хронічне і безсимптомний) може виявитися випадково на УЗД або КТ при обстеженні з
+                            <p>Найбільша помилка, що будь-які хвороби нирок повинні супроводжуватися сильним болем. Це
+                                один
+                                з можливих симптомів, але він може не завжди носити виражений характер. Латентний
+                                перебіг
+                                недуги (хронічне і безсимптомний) може виявитися випадково на УЗД або КТ при обстеженні
+                                з
                                 інших якихось причин. Скачки тиску, лихоманка, нездужання, загальна слабкість рідко
                                 сприймаються серйозно, щоб записуватися на прийом саме до уролога.</p>
 
                             <p> Якщо виникає пієлонефрит у чоловіків, то почистити нирки пивом не можна, хоча багато хто
-                                впевнений у зворотному. Це ще одне велика помилка. Пиво не несе ніякої користі нирках. А ось
-                                переохолоджуватися не можна - це правда. Це призводить до висхідних запальних процесів.</p>
+                                впевнений у зворотному. Це ще одне велика помилка. Пиво не несе ніякої користі нирках. А
+                                ось
+                                переохолоджуватися не можна - це правда. Це призводить до висхідних запальних
+                                процесів.</p>
 
                         </div>
 
@@ -549,7 +554,7 @@
 
             </div>
             <div class="footer_bottom">
-                <div class="design">Design by <strong>Profi Creative</strong></div>
+                <div class="design">Design by <a href="#"><strong>Profi Creative</strong></a></div>
                 <div class="copyright">© 2021. Всі права захищені</div>
             </div>
         </div>
