--- a/index.html
+++ b/index.html
@@ -222,7 +222,28 @@
         </section>
 
         <section class="selection-drug">
-            <div class="bg-section" style="background-image: url(assets/img/bg-tabletki.png);">
+            <div class="bg-section">
+                <div class="pills pills-1">
+                    <img src="assets/img/tab1.png" alt="" class="">
+                </div>
+                <div class="pills pills-2">
+                    <img src="assets/img/tab2.png" alt="" class="">
+                </div>
+                <div class="pills pills-3">
+                    <img src="assets/img/tab3.png" alt="" class="">
+                </div>
+                <div class="pills pills-4">
+                    <img src="assets/img/tab4.png" alt="" class="">
+                </div>
+                <div class="pills pills-5">
+                    <img src="assets/img/tab5.png" alt="" class="">
+                </div>
+                <div class="pills-bg pills-bg-l">
+                    <img src="assets/img/tab-left.png" alt="" class="">
+                </div>
+                <div class="pills-bg pills-bg-r">
+                    <img src="assets/img/tab-right.png" alt="" class="">
+                </div>
                 <div class="container">
                     <div class="section__heading color_green">
                         <div class="wrap-content">
@@ -335,7 +356,7 @@
                                         </div>
                                     </div>
 
-                                    <img src="assets/img/urolecan-upakovka.png" alt="" class="card-drug__img">
+                                    <img src="assets/img/capsula2.png" alt="" class="card-drug__img">
                                 </div>
 
                                 <div class="card-drug__header">
@@ -394,7 +415,7 @@
                                         </div>
                                     </div>
 
-                                    <img src="assets/img/urolecan-upakovka.png" alt="" class="card-drug__img">
+                                    <img src="assets/img/upakovka-syrop.png" alt="" class="card-drug__img">
                                 </div>
                                 <div class="card-drug__header">
                                     <h4 class="heading_h4">Капсули</h4>
