--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
                 <div class="pills pills-5">
                     <img src="assets/img/tab5.png" alt="" class="">
                 </div>
-                <div class="pills-bg pills-bg-l">
-                    <img src="assets/img/tab-left.png" alt="" class="">
+                <div class="pills pills-6">
+                    <img src="assets/img/tab6.png" alt="" class="">
                 </div>
-                <div class="pills-bg pills-bg-r">
-                    <img src="assets/img/tab-right.png" alt="" class="">
+                <div class="pills pills-7">
+                    <img src="assets/img/tab7.png" alt="" class="">
                 </div>
                 <div class="container">
                     <div class="section__heading color_green">
